syntax = "proto3";

option java_multiple_files = true;

package org.apache.dubbo.sample.tri;


// The request message containing the user's name.
message GreeterRequest {
  string name = 1;
}

// The response message containing the greetings
message GreeterReply {
  string message = 1;
}

service Greeter{

  // unary
  rpc greet(GreeterRequest) returns (GreeterReply);

  // clientStream
  rpc greetClientStream(stream GreeterRequest) returns (GreeterReply);

  // serverStream
  rpc greetServerStream(GreeterRequest) returns (stream GreeterReply);

  // bi streaming
  rpc greetStream(stream GreeterRequest) returns (stream GreeterReply);

  //  upper case method
  rpc UpperCaseGreet(GreeterRequest) returns (GreeterReply);

  rpc greetWithAttachment (GreeterRequest) returns (GreeterReply);

  rpc greetReturnBigAttachment (GreeterRequest) returns (GreeterReply);

  rpc greetException(GreeterRequest) returns (GreeterReply);


  rpc cancelBiStream(stream GreeterRequest) returns (stream GreeterReply);

  rpc cancelBiStream2(stream GreeterRequest) returns (stream GreeterReply);

  rpc compressorBiStream(stream GreeterRequest) returns (stream GreeterReply);

  rpc clientCompressorBiStream(stream GreeterRequest) returns (stream GreeterReply);

  rpc serverCompressorBiStream(stream GreeterRequest) returns (stream GreeterReply);


  rpc cancelServerStream(GreeterRequest) returns (stream GreeterReply);

  rpc queryCancelResult(GreeterRequest) returns (GreeterReply);

}
